--- a/src/main/resources/com/leanapp/ui.fxml
+++ b/src/main/resources/com/leanapp/ui.fxml
@@ -1,16 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="com.leanapp.controller.Controller">
-    <Button />
-   <center>
-      <VBox prefHeight="612.0" prefWidth="709.0" BorderPane.alignment="CENTER">
-         <children>
-            <Button mnemonicParsing="false" text="Button" />
-         </children>
-      </VBox>
-   </center>
-</BorderPane>
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.leanapp.controller.WeightController">
+  <tabs>
+    <Tab text="Weight Log">
+      <content>
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="731.0">
+               <children>
+                  <TableView fx:id="weightlog" fixedCellSize="0.0" layoutX="6.0" layoutY="48.0" maxHeight="305.0" maxWidth="586.0" minHeight="305.0" minWidth="575.0" prefHeight="305.0" prefWidth="586.0">
+                    <columns>
+                      <TableColumn fx:id="col_id" editable="false" prefWidth="57.0" resizable="false" text="#" />
+                      <TableColumn fx:id="col_weight" editable="false" prefWidth="260.0" resizable="false" text="Weight" />
+                        <TableColumn fx:id="col_date" editable="false" minWidth="6.0" prefWidth="257.0" resizable="false" text="Date" />
+                    </columns>
+                  </TableView>
+               </children></AnchorPane>
+      </content>
+    </Tab>
+    <Tab text="Untitled Tab 2">
+      <content>
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+      </content>
+    </Tab>
+  </tabs>
+</TabPane>
