--- a/src/main/resources/com/leanapp/RootLayout.fxml
+++ b/src/main/resources/com/leanapp/RootLayout.fxml
@@ -1,28 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
 
-<TabPane maxHeight="400" maxWidth="600" prefHeight="400.0" prefWidth="600.0"
-         tabClosingPolicy="UNAVAILABLE"
-         xmlns="http://javafx.com/javafx/11.0.1"
-         xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.leanapp.controller.MainController">
-  <tabs>
-    <Tab text="Profile">
-      <content>
-          <fx:include fx:id="profileTabPage" source="ProfileTabPage.fxml"/>
-      </content>
-    </Tab>
-    <Tab text="Weight Log">
-      <content>
-          <fx:include fx:id="weightLogTabPage" source="WeightTabPage.fxml"/>
-      </content>
-    </Tab>
-  </tabs>
+<TabPane maxHeight="400" maxWidth="600" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.leanapp.controller.MainController">
+    <tabs>
+        <Tab fx:id="profileTab" text="Profile">
+            <content>
+                <fx:include fx:id="profileTabPage" source="ProfileTabPage.fxml" />
+            </content>
+        </Tab>
+        <Tab fx:id="weightLogTab" text="Weight Log">
+            <content>
+                <fx:include fx:id="weightLogTabPage" source="WeightTabPage.fxml" />
+            </content>
+        </Tab>
+    </tabs>
 </TabPane>
