--- a/src/main/resources/com/leanapp/WeightTabPage.fxml
+++ b/src/main/resources/com/leanapp/WeightTabPage.fxml
@@ -8,23 +8,23 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="366.0" prefWidth="606.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.leanapp.controller.WeightController">
-   <children>
-      <TableView fx:id="weightlog" fixedCellSize="0.0" focusTraversable="false" layoutX="7.0" layoutY="14.0" prefHeight="303.0" snapToPixel="false">
-         <columns>
-            <TableColumn fx:id="col_id" editable="true" prefWidth="57.0" resizable="false" text="#" visible="false" />
-            <TableColumn fx:id="col_weight" editable="false" prefWidth="114.0" resizable="false" sortable="false" text="Weight" />
-            <TableColumn fx:id="col_date" editable="false" minWidth="6.0" prefWidth="138.0" resizable="false" sortable="false" text="Date" />
-            <TableColumn fx:id="col_comment" editable="false" prefWidth="334.0" resizable="false" sortable="false" text="Comment" />
-         </columns>
-         <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-         </columnResizePolicy>
-      </TableView>
-      <DatePicker fx:id="weightDate" layoutX="95.0" layoutY="331.0" prefHeight="26.0" prefWidth="120.0" promptText="date" />
-      <Button fx:id="addButton" layoutX="409.0" layoutY="331.0" mnemonicParsing="false" onAction="#addWeight" text="Add" />
-      <TextField fx:id="textFieldWeight" layoutX="14.0" layoutY="331.0" prefHeight="26.0" prefWidth="71.0" promptText="weight" />
-      <TextField fx:id="textFieldComment" layoutX="226.0" layoutY="331.0" prefHeight="26.0" prefWidth="171.0" promptText="comment" />
-      <Button layoutX="460.0" layoutY="331.0" mnemonicParsing="false" onAction="#updateWeight" text="Update" />
-      <Button layoutX="533.0" layoutY="331.0" mnemonicParsing="false" onAction="#deleteWeight" text="Delete" />
-   </children>
+    <children>
+        <TableView fx:id="weightlog" fixedCellSize="0.0" focusTraversable="false" layoutX="7.0" layoutY="14.0" prefHeight="303.0" snapToPixel="false">
+            <columns>
+                <TableColumn fx:id="col_id" editable="true" prefWidth="57.0" resizable="false" text="#" visible="false" />
+                <TableColumn fx:id="col_weight" editable="false" prefWidth="114.0" resizable="false" sortable="false" text="Weight" />
+                <TableColumn fx:id="col_date" editable="false" minWidth="6.0" prefWidth="138.0" resizable="false" sortable="false" text="Date" />
+                <TableColumn fx:id="col_comment" editable="false" prefWidth="334.0" resizable="false" sortable="false" text="Comment" />
+            </columns>
+            <columnResizePolicy>
+                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+            </columnResizePolicy>
+        </TableView>
+        <DatePicker fx:id="weightDate" layoutX="95.0" layoutY="331.0" prefHeight="26.0" prefWidth="120.0" promptText="date" />
+        <Button fx:id="addButton" layoutX="409.0" layoutY="331.0" mnemonicParsing="false" onAction="#addWeight" text="Add" />
+        <TextField fx:id="textFieldWeight" layoutX="14.0" layoutY="331.0" prefHeight="26.0" prefWidth="71.0" promptText="weight" />
+        <TextField fx:id="textFieldComment" layoutX="226.0" layoutY="331.0" prefHeight="26.0" prefWidth="171.0" promptText="comment" />
+        <Button fx:id="updateButton" layoutX="460.0" layoutY="331.0" mnemonicParsing="false" onAction="#updateWeight" text="Update" />
+        <Button fx:id="deleteButton" layoutX="533.0" layoutY="331.0" mnemonicParsing="false" onAction="#deleteWeight" text="Delete" />
+    </children>
 </AnchorPane>
