--- a/src/main/resources/com/leanapp/ProfileTabPage.fxml
+++ b/src/main/resources/com/leanapp/ProfileTabPage.fxml
@@ -1,73 +1,71 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-            prefHeight="368.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1"
-            fx:controller="com.leanapp.controller.ProfileController">
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Text?>
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="368.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.leanapp.controller.ProfileController">
     <children>
         <GridPane layoutX="14.0" layoutY="14.0" prefHeight="294.0" prefWidth="255.0">
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Profile:"/>
-                <TextField fx:id="textFieldProfile" GridPane.columnIndex="1"/>
-                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Weight:" GridPane.rowIndex="1"/>
-                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Height:" GridPane.rowIndex="2"/>
-                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Gender:" GridPane.rowIndex="3"/>
-                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Age:" GridPane.rowIndex="4"/>
-                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Muscle mass:" GridPane.rowIndex="5"/>
-                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Body fat:" GridPane.rowIndex="6"/>
-                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Activity:" GridPane.rowIndex="7"/>
-                <TextField fx:id="textFieldWeight" promptText="kg" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-                <TextField fx:id="textFieldHeight" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
-                <TextField fx:id="textFieldGender" promptText="m / f" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
-                <TextField fx:id="textFieldAge" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
-                <TextField fx:id="textFieldMuscleMass" GridPane.columnIndex="1" GridPane.rowIndex="5"/>
-                <TextField fx:id="textFieldBodyFat" promptText="\%" GridPane.columnIndex="1" GridPane.rowIndex="6"/>
-                <TextField fx:id="textFieldActivity" promptText="steps per day" GridPane.columnIndex="1"
-                           GridPane.rowIndex="7"/>
+                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Profile:" />
+                <TextField fx:id="textFieldProfile" GridPane.columnIndex="1" />
+                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Weight:" GridPane.rowIndex="1" />
+                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Height:" GridPane.rowIndex="2" />
+                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Gender:" GridPane.rowIndex="3" />
+                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Age:" GridPane.rowIndex="4" />
+                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Muscle mass:" GridPane.rowIndex="5" />
+                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Body fat:" GridPane.rowIndex="6" />
+                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Activity:" GridPane.rowIndex="7" />
+                <TextField fx:id="textFieldWeight" promptText="kg" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <TextField fx:id="textFieldHeight" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                <TextField fx:id="textFieldGender" promptText="m / f" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                <TextField fx:id="textFieldAge" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                <TextField fx:id="textFieldMuscleMass" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                <TextField fx:id="textFieldBodyFat" promptText="\%" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                <TextField fx:id="textFieldActivity" promptText="steps per day" GridPane.columnIndex="1" GridPane.rowIndex="7" />
             </children>
         </GridPane>
-        <Button fx:id="saveProfile" layoutX="117.0" layoutY="324.0" mnemonicParsing="false" onAction="#saveProfile"
-                text="Save"/>
+        <Button fx:id="saveProfile" layoutX="117.0" layoutY="324.0" mnemonicParsing="false" onAction="#saveProfile" text="Save" />
         <GridPane layoutX="300.0" layoutY="5.0" prefHeight="303.0" prefWidth="200.0">
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints maxHeight="43.0" minHeight="10.0" prefHeight="43.0" vgrow="SOMETIMES"/>
-                <RowConstraints maxHeight="43.0" minHeight="10.0" prefHeight="43.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="43.0" minHeight="10.0" prefHeight="43.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="43.0" minHeight="10.0" prefHeight="43.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="CALORIE INTAKE"/>
-                <Text fx:id="textMaintenance" strokeType="OUTSIDE" strokeWidth="0.0" text="Maintenance:"
-                      GridPane.rowIndex="1"/>
-                <Text fx:id="textDeficit" strokeType="OUTSIDE" strokeWidth="0.0" text="Calorie deficit:"
-                      GridPane.rowIndex="2"/>
-                <Text fx:id="textSurplus" strokeType="OUTSIDE" strokeWidth="0.0" text="Calorie surplus:"
-                      GridPane.rowIndex="3"/>
-                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="WEIGHT LOSS" GridPane.rowIndex="4"/>
-                <Text fx:id="textAverage" strokeType="OUTSIDE" strokeWidth="0.0" text="Average:" GridPane.rowIndex="5"/>
-                <Text fx:id="textTotal" strokeType="OUTSIDE" strokeWidth="0.0" text="Total:" GridPane.rowIndex="6"/>
+                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="CALORIE INTAKE" />
+                <Text fx:id="textMaintenance" strokeType="OUTSIDE" strokeWidth="0.0" text="Maintenance:" GridPane.rowIndex="1" />
+                <Text fx:id="textDeficit" strokeType="OUTSIDE" strokeWidth="0.0" text="Calorie deficit:" GridPane.rowIndex="2" />
+                <Text fx:id="textSurplus" strokeType="OUTSIDE" strokeWidth="0.0" text="Calorie surplus:" GridPane.rowIndex="3" />
+                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="WEIGHT LOSS" GridPane.rowIndex="4" />
+                <Text fx:id="textAverage" strokeType="OUTSIDE" strokeWidth="0.0" text="Average:" GridPane.rowIndex="5" />
+                <Text fx:id="textTotal" strokeType="OUTSIDE" strokeWidth="0.0" text="Total:" GridPane.rowIndex="6" />
             </children>
         </GridPane>
     </children>
